--- a/src/component/scheduleAppointmentnew/shedule_appointmentnew.css
+++ b/src/component/scheduleAppointmentnew/shedule_appointmentnew.css
@@ -45,7 +45,7 @@
 }
 
 .inputBox {
-    background: #FAFAFA;
+    background: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.2);
     height: 34px;
     width: 100%;
